[Fix:Aside] Fix bug on aside menu overflow

--- a/src/assets/styles/global/_layout.scss
+++ b/src/assets/styles/global/_layout.scss
@@ -1,4 +1,6 @@
 body {
+  overflow: hidden;
+  overflow-y: auto;
   background-color: lighten($color-whisper, 5);
   color: $color-mine-shaft;
   &.body--noScroll {
