--- a/src/assets/styles/helpers/_variables.scss
+++ b/src/assets/styles/helpers/_variables.scss
@@ -46,7 +46,7 @@ $border-radius-base: 4px;
 //   z-index     //
 ///////////////////
 $z-index-tooltip: 10000;
-$z-index-list-dropdown: 8500;
+$z-index-list-dropdown: 9000;
 $z-index-header: 9000;
 $z-index-aside: 9000;
 
